[package]
name = "cargo-cheh"
version = "0.1.0"
authors = ["Antoine Martin <antoine97.martin@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "CHEHHH"
homepage = "https://github.com/alarsyo/cargo-cheh"
repository = "https://github.com/alarsyo/cargo-cheh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
